# libratbag

./: .gitignore  .gitmodules  README.md  TODO  meson.build  meson_options.txt  package-lock.json
.agents/rules/: rust-coding.md
.github/workflows/: build-appimage.yml
data/devices/: logitech-g502-hero-wireless.device  logitech-g502-hero.device  logitech-g502-proteus-spectrum.device  logitech-g604.device
ratbagctl-rs/: Cargo.toml
ratbagctl-rs/src/: dbus_client.rs
ratbagd/: ratbagd-test.h
ratbagd-rs/: Cargo.toml
ratbagd-rs/src/: actor.rs  device.rs  device_database.rs  error.rs  lib.rs  main.rs  test_device.rs  udev_monitor.rs
ratbagd-rs/src/dbus/: button.rs  device.rs  led.rs  manager.rs  mod.rs  profile.rs  resolution.rs
ratbagd-rs/src/driver/: asus.rs  etekcity.rs  gskill.rs  hidpp.rs  hidpp10.rs  hidpp20.rs  logitech_g300.rs  logitech_g600.rs  marsgaming.rs  mod.rs  openinput.rs  roccat.rs  sinowealth.rs  sinowealth_nubwo.rs  steelseries.rs
src/: hidpp20.c  hidpp20.h  libratbag-data.c
test/: README.md  __init__.py  conftest.py  ratbag_dbus.py  test_button_led.py  test_integration.py  test_manager_device.py  test_profile_resolution.py
