option('systemd', type: 'boolean', value: true, description: 'Enable systemd unit files')

option('systemd-unit-dir', type: 'string', value: '', description: 'Systemd unit files directory')
option('dbus-root-dir', type: 'string', value: '', description: 'DBus root directory')
option('dbus-group', type: 'string', value: 'wheel', description: 'Group for DBus access control')
option('build-gui', type: 'boolean', value: true, description: 'Build the Twister Svelte/Tauri GUI dashboard (requires npm)')
